Make sure alignment for flex column is at the start for scroll content

--- a/src/virtual-scroll-text.css
+++ b/src/virtual-scroll-text.css
@@ -9,6 +9,7 @@
   flex: 1; 
   min-width: 0;
   flex-direction: column !important;
+  justify-content: flex-start !important;
 }
 
 .vscrolltext-content span.cell {
